@@ -1,6 +1,12 @@
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
 
-	* logview.c: (logview_init):
+	* misc.c (month): 
+	* logview.c:
+	* loglist.c: Remove the restoration_complete variable. Use
+	GTK_WIDGET_VISIBLE instead.
+	
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
 	* logview.h:
 	* main.c: (main): Be smarter when showing the widget.
 
